# addresscompletion

./: .gitignore
ustndquery/: README.md  pyproject.toml
ustndquery/src/ustndquery/: example.py
ustndquery/src/ustndquery/dataclass/: query.py
ustndquery/src/ustndquery/ui/: ui.py
ustndquery/tests/: test_example.py
